--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,11 @@ envlist = py26,py27,py32,py33
 
 [testenv]
 deps=nose
+     pyforge
 commands=nosetests -w {toxinidir}/tests
 changedir = {envdir}
 
 [testenv:py26]
 deps=unittest2
      nose
+     pyforge
