--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - 3.3
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
-  - sudo easy_install nose
-  - sudo python setup.py develop
+  - "pip install nose pyforge"
+  - "python setup.py develop"
 # command to run tests, e.g. python setup.py test
 script: nosetests -w tests
