--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ python:
   - 2.7
   - 3.2
   - 3.3
+  - pypy
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
-  - "pip install nose pyforge"
   - "python setup.py develop"
+  - "python scripts/test_setup.py"
 # command to run tests, e.g. python setup.py test
 script: nosetests -w tests
