--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,8 @@
 [tox]
-envlist = py27,py32,py33
+envlist = py26,py27,py33,pypy
 
 [testenv]
-deps=nose
-     pyforge
-commands=nosetests -w {toxinidir}/tests
-changedir = {envdir}
-
-[testenv:py26]
-deps=unittest2
-     nose
-     pyforge
+commands=
+	python scripts/test_setup.py
+	nosetests -w tests
+changedir = {toxinidir}
