--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist = py26,py27,py33,py34,pypy
 
 [testenv]
+deps=pytest
 commands=
 	python scripts/test_setup.py
-	nosetests -w tests
+	py.test tests
 changedir = {toxinidir}
