--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: python
+sudo: false
 python:
   - 2.7
   - 3.2
   - 3.3
   - 3.4
+  - 3.5
   - pypy
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
-  - "python setup.py develop"
-  - "python scripts/test_setup.py"
+  - pip install -e .
+  - python scripts/test_setup.py
 # command to run tests, e.g. python setup.py test
 script: py.test tests
