--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ python:
   - 3.2
   - 3.3
   - 3.4
-  - 3.5
   - pypy
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
@@ -13,3 +12,13 @@ install:
   - python scripts/test_setup.py
 # command to run tests, e.g. python setup.py test
 script: py.test tests
+deploy:
+  provider: pypi
+  user: vmalloc
+  distributions: bdist_wheel
+  password:
+    secure: sNOkUNFfWKGsRy4BI+1jyqycZGSMiXTLtpCrX1mTuvjddbndULrHL3ecIPsCno49/nPR4Gww+e9U3HXc8LKJ9qR4mJ8bVCNiHO5GlGVnpV+wdGh9LVnsU1LWwuD8uWlLyTSOKP+ZmerCw7tGACYiv0e9zp8SqZXCH6VS+sAGFxU=
+  on:
+    tags: true
+    all_branches: true
+    repo: vmalloc/flux
