--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
 language: python
 sudo: false
+dist: xenial
 python:
-- 2.6
 - 2.7
-- 3.3
-- 3.4
-- 3.5
-- pypy
+- 3.6
+- 3.7
 install:
 - pip install -e .
 - python scripts/test_setup.py
-script: py.test tests
+script: pytest tests
 deploy:
   provider: pypi
   user: vmalloc
