Improve test code

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,10 @@ license = BSD
 author = Rotem Yaari
 author_email = vmalloc@gmail.com
 url = https://github.com/getslash/flux
+
+
+[extras]
+testing =
+        pyforge
+        pytest
+        gevent
