--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ python:
 - 3.6
 - 3.7
 install:
-- pip install -e .
-- python scripts/test_setup.py
+- pip install -e .[testing]
 script: pytest tests
 deploy:
   provider: pypi
