--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,10 @@ url = https://github.com/getslash/flux
 
 [extras]
 testing =
-        pyforge
-        pytest
-        gevent
+    pyforge
+    pytest>=5.4.0
+    gevent
+    pytest-asyncio
 
 doc =
     alabaster
